--- a/style.css
+++ b/style.css
@@ -262,3 +262,57 @@ padding:16.875rem 0 9.375rem;
  .top-banner p{
     color: var(--white-color);
  }
+
+
+ /* ==============
+ our main menu
+ ===================*/
+
+.our-menu .card{
+    border: none;
+} 
+
+.our-menu .link_category_product{
+position: relative;
+display: block;
+z-index:1;
+}
+
+.our-menu .link_category_product::before{
+position: absolute;
+content: '';
+top:50%;
+left:50%;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+border: 2px dotted var(--secondry-color);
+z-index:-1;
+transform: translateX(-50%) translateY(-50%) scale(0);
+background: var(--primary-color);
+-webkit-transition: all .4s ease;
+-moz-transition: all .4s ease;
+-ms-transition: all .4s ease;
+-o-transition:all .4s ease;
+transition: all .4s ease;
+
+
+}
+.card:hover .link_category_product::before{
+    transform: translateX(-50%) translateY(-50%) scale(1);
+}
+
+.our-menu .cat-tittle a{
+    text-align: center;
+font-size: 0.8125rem;
+position: relative;
+display: inline-block;
+text-transform: uppercase;
+font-weight: 700;
+color:var(--black-color);
+text-decoration: none;
+}
+
+.card:hover .cat-tittle a{
+    color: var(--primary-color);
+} 
