--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ Header Design
 ====================
 */
 
+
 .navigation-wrap{
     position: fixed;
 width: 100%;
@@ -181,6 +182,7 @@ left: 0;
 z-index: 1000;
 -webkit-transition: all 0.3s ease-out;
 transition: all 0.3s ease-out;
+
 }
 
 
@@ -254,6 +256,7 @@ top-banner Design
  .top-banner{
 width: 100%;
 background: url('../images/bg/bg-1.jpg') no-repeat center;
+
 background-size: cover;
 padding:16.875rem 0 9.375rem;
 
@@ -316,3 +319,59 @@ text-decoration: none;
 .card:hover .cat-tittle a{
     color: var(--primary-color);
 } 
+
+
+
+/* ==================
+about section Design 
+=====================*/
+
+.about-section{
+    background: var(--black-color);
+
+}
+
+
+.about-section .card,
+.about-section .card img{
+    border-radius: 0.625rem;
+}
+
+.about-section .text-sec{
+    padding-left:2rem ;
+}
+
+
+
+/* ==================
+food type section design
+=====================*/
+.food-type{
+    padding-top: 3.25rem;
+}
+
+.food-type ul li{
+    font-size: 1rem;
+color: var(--text-color);
+line-height: 32px;
+position: relative;
+margin-left: 30px;
+
+}
+
+.food-type ul li ::before{
+    position: absolute;
+left: -2.1875rem;
+color: var(--primary-color);
+font-size: 1.25rem;
+font-family: "Font Awesome 5 Free";
+content:'\f00c';
+display: inline-block;
+padding-right:3px;
+vertical-align: middle;
+font-weight: 900;
+
+
+
+
+}
