--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ testimonial section design
 =====================*/
 .testimonial-section{
     background: var(--secondry-color);
+   
 }
 
 .testimonial-section h2{
@@ -427,6 +428,7 @@ text-align: center;
     max-width: 5rem;
     border-radius: 50%;
 padding: 0.3125rem;
+
 
 
 }
@@ -463,3 +465,89 @@ opacity: 0.2;
     font-weight: bolder;
 }
 
+
+ /* ==================
+footer section design
+=====================*/
+
+.footer{
+    background: var(--black-color);
+}
+
+/* .footer .footer-link{
+    font-size: 1rem;
+color: var(--black-color);
+padding: 0 1.875rem;
+} */
+
+/* .footer .footer-link:hover{
+    color:var(--white-color);
+} */
+
+.footer .footer-social a i{
+font-size: 1.5rem;
+color: var(--white-color);
+padding: 0 1rem;
+
+}
+
+.footer .footer-social a:hover i{
+    color: var(--primary-color);
+
+}
+
+
+/* form control */
+
+
+.newsletter .form-control{
+height: 3.25rem;
+padding: 0 1.25rem;
+font-size: 0.875rem;
+width: 100%;
+border-radius: 0;
+background: transparent;
+border: 0.1875rem solid var(--black-color);
+font-weight: 700;
+}
+
+.newsletter .main-btn{
+    height: 3.225rem;
+padding: 0 1.25rem;
+font-size:0.875rem; ;
+border-radius: 0;
+background-color: var(--white-color);
+border: 0.1875rem solid var(--white-color);
+color: var(--black-color);
+font-weight: 700;
+}
+
+.newsletter:hover .form-control{
+    border: 0.1875rem solid var(--primary-color);
+    color: var(--black-color);
+
+}
+
+.newsletter:hover .main-btn{
+    background: var(--primary-color);
+border: 0.1875rem solid var(--primary-color);
+
+}
+
+.newsletter .form-control:hover,
+.newsletter .form-control:focus{
+    outline: none;
+box-shadow: none;
+border: var(--primary-color);
+}
+
+.footeeer{
+    display: flex;
+justify-content: space-around;
+align-items: center;
+/* background-color: black; */
+color: white;
+padding: 10px;
+
+
+}
