--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ Header Design
 
 
 .navigation-wrap{
-    position: fixed;
+position: fixed;
 width: 100%;
 left: 0;
 z-index: 1000;
@@ -255,8 +255,7 @@ top-banner Design
 
  .top-banner{
 width: 100%;
-background: url('../images/bg/bg-1.jpg') no-repeat center;
-
+background:url(images/bg/bg-1.jpg) no-repeat center;
 background-size: cover;
 padding:16.875rem 0 9.375rem;
 
@@ -551,3 +550,4 @@ padding: 10px;
 
 
 }
+
